--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css
 
         ">
+        <link rel="icon" href="favicon.ico">
+
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
