--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
     <section id="press">
         <div class="row">
-            <div class="col-lg-3 col-md-6"><img class="press-img" src="images/techcrunch.png" alt="tc-logo"></div>
+            <div class="col-lg-3 col-md-6"><img class="press-img" src="images/TechCrunch.png" alt="tc-logo"></div>
             <div class="col-lg-3 col-md-6"><img class="press-img" src="images/tnw.png" alt="tnw-logo"></div>
             <div class="col-lg-3 col-md-6"><img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo"></div>
             <div class="col-lg-3 col-md-6"><img class="press-img" src="images/mashable.png" alt="mashable-logo"></div>
